# webswarm

./: README.md
dev_containers/: compose.yaml  jobs_schema.sql
infra/ephemeral/: .terraform.lock.hcl  data.tf  ephemeral_vars.tf  main.tf  pgbouncer.tf  workers.tf
infra/ephemeral/scripts/: cloudwatch-agent.json  pgbouncer-user-data.sh  worker-user-data.sh
infra/persistent/: main.tf  outputs.tf  persistent_vars.tf  rds.tf  security_groups.tf  versions.tf
pgbouncer/: .dockerignore  Dockerfile  entrypoint.sh  pgbouncer.ini.template
scripts/: export_sheet.py
worker/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
worker/src/crawler/: bootstrap.py  worker.py
worker/src/crawler/pipeline/: classifier.py  fetcher.py  orchestrator.py  parser.py  searcher.py  trace.py  types.py
worker/src/crawler/pipeline/prompts/: booking.txt  expected_shapes.py  landing.txt  profiles.txt
