[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traveler"
version = "0.0.0"
requires-python = ">=3.10"

dependencies = [
    "httpx==0.28.1",
    "openai==2.14.0",
    "psycopg[binary]==3.3.2",
    "psycopg-pool==3.3.0",
    "pydantic==2.12.5",
    "RapidFuzz==3.14.3",
    "tldextract==5.3.1",
    "lxml==6.0.2",
    "publicsuffix2==2.20191221",
    "Unidecode==1.4.0",
    "playwright==1.58.0",
    "schema==0.7.8"
]

[tool.setuptools.packages.find]
where = ["src"]
